--- a/kdump.conf
+++ b/kdump.conf
@@ -106,6 +106,7 @@
 #link_delay 60
 #kdump_post /var/crash/scripts/kdump-post.sh
 #extra_bins /usr/bin/lftp
+#disk_timeout 30
 #extra_modules gfs2
 #default shell
 
