Add debug_mem_level debugging option, resolve Bug 731395

--- a/kdump.conf
+++ b/kdump.conf
@@ -95,6 +95,15 @@
 #				  Exiting this shell reboots the system.
 #			  NOTE: If no default action is specified, the initramfs
 #				will mount the root file system and run init.
+#
+# debug_mem_level <0-3>
+#                       - Turns on debug/verbose output of kdump scripts
+#                         regarding free/used memory at various points of
+#                         execution. Higher level means more debugging output.
+#                         0 - no output
+#                         1 - partial /proc/meminfo
+#                         2 - /proc/meminfo
+#                         3 - /proc/meminfo + /proc/slabinfo
 
 #raw /dev/sda5
 #ext4 /dev/sda3
@@ -110,4 +119,5 @@
 #disk_timeout 30
 #extra_modules gfs2
 #default shell
+#debug_mem_level 0
 
