--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ makedumpfile-1.3.5.tar.gz
 /makedumpfile-1.5.1.tar.gz
 /makedumpfile-1.5.3.tar.gz
 /eppic_030413.tar.gz
+/kexec-tools-2.0.4.tar.bz2
