--- a/kdump.conf
+++ b/kdump.conf
@@ -119,6 +119,10 @@
 #			Specifying 1 means though block target is unresettable, user
 #			understand this situation and want to try dumping. By default,
 #			it's set to 0, means not to try a destined failure.
+#
+# dracut_args <arg(s)>
+#			- Pass extra dracut options when rebuilding kdump
+#			  initrd.
 
 #raw /dev/vg/lv_kdump
 #ext4 /dev/vg/lv_kdump
@@ -136,3 +140,4 @@ path /var/crash
 #extra_modules gfs2
 #default shell
 #force_rebuild 1
+#dracut_args --omit-drivers "cfg80211 snd" --add-drivers "ext2 ext3"
