--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ makedumpfile-1.3.5.tar.gz
 /makedumpfile-1.5.3.tar.gz
 /eppic_030413.tar.gz
 /kexec-tools-2.0.4.tar.bz2
+/makedumpfile-1.5.4.tar.gz
