makedumpfile compression method default to lzo
Lzo is proven faster than zlib, for large memory machine it will
extremely shorten the time for saving vmcore. Let's switch to lzo as the
default compression method for makedumpfile.

The drawback is lzo has a little less compression ratio than zlib. But
considering for most users, speed/time is a more serious concern than
vmcore size. So I think default to lzo will benefit most of the users.

v1->v2: update kdump.conf.5 [DaveY]

Signed-off-by: WANG Chao <chaowang@redhat.com>
Acked-by: Vivek Goyal <vgoyal@redhat.com>
Acked-by: Dave Young <dyoung@redhat.com>

--- a/kdump.conf
+++ b/kdump.conf
@@ -50,9 +50,9 @@
 #			  automatically be populated with a config file
 #			  appropriate for the running kernel.
 #			  Default core_collector for raw/ssh dump is:
-#			  "makedumpfile -F -c --message-level 1 -d 31".
+#			  "makedumpfile -F -l --message-level 1 -d 31".
 #			  Default core_collector for other targets is:
-#			  "makedumpfile -c --message-level 1 -d 31".
+#			  "makedumpfile -l --message-level 1 -d 31".
 #			  For core_collector format details please refer to
 #			  kexec-kdump-howto.txt or kdump.conf manpage.
 #
@@ -132,7 +132,7 @@
 #ssh user@my.server.com
 #sshkey /root/.ssh/kdump_id_rsa
 path /var/crash
-#core_collector makedumpfile -c --message-level 1 -d 31
+#core_collector makedumpfile -l --message-level 1 -d 31
 #core_collector scp
 #kdump_post /var/crash/scripts/kdump-post.sh
 #kdump_pre /var/crash/scripts/kdump-pre.sh
