Translation, Makefile: add make tgz option to auto pack po files
make tgz now will automatically pack the po files and Makefile to
kexec-tools-po-`date +%Y%m%d`.tgz to make life easier when we update po
files.

Signed-off-by: WANG Chao <chaowang@redhat.com>

--- a/po/Makefile
+++ b/po/Makefile
@@ -52,4 +52,10 @@ merge: $(POTFILE) $(POFILES)
 		$(MSGMERGE) $$base $(NLSPACKAGE).pot; \
 	done
 
+tgz:
+	@rm -rf ../kexec-tools-po
+	@mkdir ../kexec-tools-po
+	@cp $(POFILES) Makefile ../kexec-tools-po
+	@tar -czvf ../kexec-tools-po-$(shell date +%Y%m%d).tgz ../kexec-tools-po
+
 .PHONY: missing depend
