kdump.conf: uncomment default core_collector line
Having uncommented core_collector line in default kdump.conf would help
s-c-kdump determine which arguments to use without relying on hardcoded
values.

Signed-off-by: WANG Chao <chaowang@redhat.com>
Acked-by: Vivek Goyal <vgoyal@redhat.com>

--- a/kdump.conf
+++ b/kdump.conf
@@ -132,7 +132,7 @@
 #ssh user@my.server.com
 #sshkey /root/.ssh/kdump_id_rsa
 path /var/crash
-#core_collector makedumpfile -l --message-level 1 -d 31
+core_collector makedumpfile -l --message-level 1 -d 31
 #core_collector scp
 #kdump_post /var/crash/scripts/kdump-post.sh
 #kdump_pre /var/crash/scripts/kdump-pre.sh
