kdump-emergency.service: executable uses absolute path
Bao noticed the following systemd warning:

systemd[1]: [/usr/lib/systemd/system/emergency.service:17] Executable path is
not absolute, ignoring: systemctl --no-block isolate kdump-error-handler.service

It turns out that now systemd doesn't allow relative path for an executable, we
must adapt that, make the change.

Signed-off-by: WANG Chao <chaowang@redhat.com>
Tested-by: Baoquan He <bhe@redhat.com>
Acked-by: Vivek Goyal <vgoyal@redhat.com>

--- a/dracut-kdump-emergency.service
+++ b/dracut-kdump-emergency.service
@@ -14,7 +14,7 @@ Description=Kdump Emergency
 DefaultDependencies=no
 
 [Service]
-ExecStart=systemctl --no-block isolate kdump-error-handler.service
+ExecStart=/usr/bin/systemctl --no-block isolate kdump-error-handler.service
 Type=oneshot
 StandardInput=tty-force
 StandardOutput=inherit
