--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /makedumpfile-1.5.7.tar.gz
 /kexec-tools-2.0.8.tar.xz
 /kdump-anaconda-addon-005-2-g86366ae.tar.gz
+/kdump-anaconda-addon-005-5-gbf53665.tar.gz
