dracut-early-kdump: explicitly use bash
Currently dracut-early-kdump.sh claims to be POSIX compliant but it
sources kdump-lib.sh which uses bash-only syntax. Thus require bash for
dracut-early-kdump.sh as well.

Signed-off-by: Philipp Rudo <prudo@redhat.com>

--- a/.editorconfig
+++ b/.editorconfig
@@ -22,7 +22,7 @@ space_redirects    = true
 shell_variant = bash
 
 # Use dracut code style for *-module-setup.sh
-[*-module-setup.sh]
+[*-module-setup.sh,dracut-early-kdump.sh]
 shell_variant = bash
 indent_style = space
 indent_size = 4
